# interlink-kubernetes-plugin

./: .gitignore  .pylintrc  AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile-dev
infr/charts/tcp-tunnel/templates/: _helpers.tpl
infr/containers/prod/: requirements.txt
infr/manifests/: bastion-pod.yaml  gateway-pod.yaml  test-pod.yaml
src/: main.py
src/app/: dependencies.py  microservice.py  server.py
src/app/common/: config.py  error_types.py  logger_manager.py  messages.py  strings.py
src/app/controllers/: __init__.py
src/app/controllers/v1/: kubernetes_plugin_controller.py
src/app/entities/: kube_configuration.py  kubernetes_plugin_configuration.py  mappers.py  types.py
src/app/repositories/: base_repository.py
src/app/services/: base_service.py  exceptions.py  kubernetes_plugin_service.py
src/app/templates/: error.html
src/app/utilities/: argparse_utilities.py  async_utilities.py  dictionary_utilities.py  file_utilities.py  kafka_client.py  list_utilities.py  s3_client.py  string_utilities.py  zip_utilities.py
src/infr/charts/tcp-tunnel/: Chart.yaml  README.md  chartpress.yaml
src/infr/containers/dev/: requirements.txt
src/infr/containers/prod/: .dockerignore  (+2 more)
src/infr/manifests/: custom-mesh-script-k8s.yaml  mesh-script-template-k8s.sh  test-gpu.yaml  test-microservice.yaml  test-pod-pvc.yaml  test-pod.yaml
src/infr/scripts/: docker_build_and_publish.sh
src/private/: config.sample.ini
test/: test_all.py
test/manifests/: test-gpu.yaml  test-microservice.yaml  test-pod-pvc.yaml  test-pod.yaml
(+27 files in other folders)
